# multi-layer

./: .gitignore  pyproject.toml  readme.md
notebooks/: mismip+.ipynb  multilayer-tutorial.ipynb
src/multilayer/: __init__.py  constants.py
src/multilayer/model/: __init__.py  minimization.py  utilities.py  variational.py
test/: ismip_hom_b.py  ismip_hom_b_composite.py  ismip_hom_d.py  mismip_plus.py  mismip_plus_spinup.py  parallel_slab.py  plot_composite.py  plot_ismip_hom.py  plot_schematic.py
